--- a/frontend/src/app/features/cart/cart-list/cart-list.component.html
+++ b/frontend/src/app/features/cart/cart-list/cart-list.component.html
@@ -25,7 +25,7 @@
       <div class="lg:col-span-2 space-y-4">
         <div *ngFor="let item of cart.items" class="bg-white p-6 rounded-2xl shadow-card flex gap-6">
           <div class="w-24 h-24 bg-secondary-100 rounded-xl overflow-hidden flex-shrink-0">
-            <img *ngIf="item.product.images?.length" [src]="item.product.images[0].image_url" [alt]="item.product.name" class="w-full h-full object-cover">
+            <img *ngIf="item.product.images?.length" [src]="getImageUrl(item.product.images[0].image_url)" [alt]="item.product.name" class="w-full h-full object-cover">
           </div>
           <div class="flex-1 flex flex-col justify-between">
             <div class="flex justify-between">
