--- a/frontend/src/app/features/orders/order-history/order-history.component.html
+++ b/frontend/src/app/features/orders/order-history/order-history.component.html
@@ -48,7 +48,7 @@
           <div class="space-y-4">
             <div *ngFor="let item of order.items" class="flex gap-4 items-center">
                <div class="w-16 h-16 bg-secondary-100 rounded-lg overflow-hidden flex-shrink-0">
-                 <img *ngIf="item.product.images?.length" [src]="item.product.images[0].image_url" class="w-full h-full object-cover">
+                 <img *ngIf="item.product.images?.length" [src]="getImageUrl(item.product.images[0].image_url)" class="w-full h-full object-cover">
                </div>
                <div class="flex-1">
                  <p class="font-bold text-secondary-900">{{ item.product.name }}</p>
