--- a/frontend/src/app/features/shop/product-details/product-details.component.html
+++ b/frontend/src/app/features/shop/product-details/product-details.component.html
@@ -153,11 +153,29 @@
                 Add to Cart
               </button>
               <button
-                (click)="addToWishlist()"
-                class="btn-secondary flex justify-center items-center p-3 rounded-xl border border-secondary-200 hover:text-red-500 hover:border-red-200"
-                title="Add to Wishlist"
+                (click)="toggleWishlist()"
+                class="btn-secondary flex justify-center items-center p-3 rounded-xl border border-secondary-200 hover:text-red-500 hover:border-red-200 transition-colors"
+                [ngClass]="{'text-red-500 border-red-200 bg-red-50': isInWishlist}"
+                [title]="isInWishlist ? 'Remove from Wishlist' : 'Add to Wishlist'"
               >
+                <!-- Filled Heart -->
                 <svg
+                  *ngIf="isInWishlist"
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="h-6 w-6"
+                  viewBox="0 0 20 20"
+                  fill="currentColor"
+                >
+                  <path
+                    fill-rule="evenodd"
+                    d="M3.172 5.172a4 4 0 015.656 0L10 6.343l1.172-1.171a4 4 0 115.656 5.656L10 17.657l-6.828-6.829a4 4 0 010-5.656z"
+                    clip-rule="evenodd"
+                  />
+                </svg>
+
+                <!-- Outlined Heart -->
+                <svg
+                  *ngIf="!isInWishlist"
                   xmlns="http://www.w3.org/2000/svg"
                   class="h-6 w-6"
                   fill="none"
