--- a/frontend/src/app/app.html
+++ b/frontend/src/app/app.html
@@ -1,4 +1,6 @@
 <div class="flex flex-col min-h-screen">
+  <app-toast></app-toast>
+  <app-confirmation-modal></app-confirmation-modal>
   @if (showNavbar) {
     <app-header></app-header>
   }
