--- a/frontend/src/app/core/layout/header/header.html
+++ b/frontend/src/app/core/layout/header/header.html
@@ -1,1 +1,7 @@
-<p>header works!</p>
+<div class="header-container">
+  <p>header works!</p>
+  <div class="search-bar">
+    <input type="text" [(ngModel)]="searchQuery" (keyup.enter)="onSearch()" placeholder="Search products...">
+    <button (click)="onSearch()">Search</button>
+  </div>
+</div>
